replace more integer constructors