@@ -67,14 +67,14 @@ class ExtendedScanner extends Scanner {
   }
 
   private void initIDs() {
-    ids.put("div", new Integer(ids.size()));
-    ids.put("mod", new Integer(ids.size()));
+    ids.put("div", Integer.valueOf(ids.size()));
+    ids.put("mod", Integer.valueOf(ids.size()));
   }
 
   public int getID(String text) {
     Integer val = (Integer) ids.get(text);
     if (val == null) {
-      val = new Integer(ids.size());
+      val = Integer.valueOf(ids.size());
       ids.put(text, val);
     }
     return val.intValue();
