@@ -35,7 +35,7 @@ abstract class Scanner {
   public String tokName(int t) {
     return   (t == 0) ? eofName
            : (t < 256) ? "'" + (new Character((char)t)).toString() + "'"
-           : (String) (tokNames.get(new Integer(t)));
+           : (String) (tokNames.get(Integer.valueOf(t)));
   }
 
   public String currentLine() {
@@ -113,7 +113,7 @@ abstract class Scanner {
   }
 
   protected void addTok(int tok, String name) {
-    tokNames.put(new Integer(tok), name);
+    tokNames.put(Integer.valueOf(tok), name);
   }
 
   protected final char peek(int i) {
